updated front page info

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
         </div>
 
         <p>
-          I am currently an undergraduate student studying UX Design + Computer Science at Western Washington University! I am a curious learner who seeks to use design and development as a bridge towards creating compelling user experiences!
+          Hello! My name is Ann!
+        </p>
+        <p>
+          I am a recent graduate (March 2023) of Western Washington University, where I studied both Computer Science and UX Design.        
         </p>
 
         <p>
@@ -55,11 +58,11 @@
         </p>
 
         <p>
-          I am always down to working with lovely people on creative projects, and I am super excited that you decided to stop by.
+          I am always down to working with lovely people on creative projects, and I am super happy that you decided to stop by.
         </p>
 
         <p>
-          Please enjoy your stay &#129392
+          Below are some of my recent projects, please enjoy your stay &#129392
         </p>
       </div>
 
