update to light mode

--- a/assets/projectPages/noteableAssets/noteable.html
+++ b/assets/projectPages/noteableAssets/noteable.html
@@ -21,13 +21,13 @@
       href="../../icons/tabIcon.png"
     />
 
-    <title> Ann C. Tseng | Noteable </title>
+    <title> C. Tseng | Noteable </title> 
   </head>
 
   <body>
     <!-- Navbar -->
     <nav>
-        <h1> Ann C. Tseng </h1>
+        <h1> C. Tseng </h1>
         <ul class="navigation">
             <li><a href="../../../index.html" class="nav-link">About</a></li>
             <li><a href="../../../index.html#work-div" class="nav-link">Work</a></li>
