--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       href="assets/icons/tabIcon.png"
     />
 
-    <title> Ann C. Tseng | Home </title>
+    <title> C. Tseng | Home </title>
   </head>
 
   <body>
     <!-- Navbar -->
     <nav>
-        <h1> Ann C. Tseng </h1>
+        <h1> C. Tseng </h1>
         <ul class="navigation">
             <li><a href="#about" class="nav-link"> About </a></li>
             <li><a href="#work-div" class="nav-link">Work</a></li>
@@ -47,23 +47,12 @@
         </div>
 
         <p>
-          Hello! My name is Ann!
-        </p>
-        <p>
-          I am a recent graduate (March 2023) of Western Washington University, where I studied both Computer Science and UX Design.        
+          Hi there! My name is <u style="color: var(--secondary-color)"> <strong>Chia-en Tseng</strong></u> <br>
+          I'm a <strong> Software Product Engineer </strong> growing my skills to bridge the gap between <u>product vision + development feasibility</u>
         </p>
 
-        <p>
-          When I am not working on design or code projects... You can find me doodling, watching movies/musicals, hanging out with friends, or finding delicious food around Seattle.
-        </p>
-
-        <p>
-          I am always down to working with lovely people on creative projects, and I am super happy that you decided to stop by.
-        </p>
-
-        <p>
-          Below are some of my recent projects, please enjoy your stay &#129392
-        </p>
+        <p> In order to envision + build strong user experiences, I like throwing myself into challenging problem spaces both in design and in engineering </p>
+        <p> Below are a few things I worked on! <strong>Enjoy</strong></p>
       </div>
 
       <a id="work-div" style="display: block; position: relative; top: -75px; visibility: hidden;"></a>
